[tool.poetry]
name = "QpiAI Pro - Data Preparation"
version = "0.1.0"
description = "QpiAI Pro Data Preparation Microservice"
authors = ["Rajsekar Routhu <rajsekar.routhu@qpiai.tech>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
async-exit-stack = "^1.0.1"
async_generator = "^1.10"
requests = "^2.26.0"
qpiai-utils = "^0.1.8"
pandas = "^1.3.2"
librosa = "^0.7.2"
validator-collection = "^1.5.0"
matplotlib = "^3.4.3"
gluoncv = "^0.10.4"
torch = "^1.9.0"
seaborn = "^0.11.2"
nltk = "^3.6.2"
contractions = "^0.0.52"
inflect = "^5.3.0"
bs4 = "^0.0.1"
gTTS = "^2.2.3"
gensim = "^4.1.0"
imgaug = "^0.4.0"
numba = "^0.49.0"
pyinstaller = "^4.5.1"
albumentations = "^0.5.2"
opencv-python = "^4.2.0.34"
tornado = "^6.1"
pre-commit = "^2.15.0"
numpy = "^1.22.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.14.0"

[[tool.poetry.source]]
name = "qpiai-pypi"
url = "https://gitlab.qpiai.tech/api/v4/projects/4/packages/pypi/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"